--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
@@ -25,7 +25,8 @@
 	\item[sezione \ref{sec:analisi}] Analisi e trattamento dei rischi;
 	\item[sezione \ref{sec:pianificazione}] Pianificazione delle attività;
 	\item[sezione \ref{sec:preventivo}] Suddivisione delle ore lavorative e preventivo;
-           \item[sezione \ref{sec:consuntivo}] Consuntivo di periodo.
+           \item[sezione \ref{sec:consuntivo}] Consuntivo di periodo;
+	\item[sezione \ref{sec:organigramma}] Organigramma.
 \end{description}
 
 	\subsection{Scopo del prodotto}
@@ -1043,5 +1044,87 @@ Questo quadro riassuntivo include il periodo di {\AR}, il quale \textbf{non è a
 \section{Consuntivo di periodo} \label{sec:consuntivo}
 %da fare
 
+\section{Organigramma}	\label{sec:organigramma}
+\subsection{Redazione}
+\begin{table}[htbp]
+	\begin{center}
+		\setlength{\extrarowheight}{\jot}
+		\begin{tabular}{|c|c|p{5cm}|}
+			\hline
+			\textbf{Nominativo} & \textbf{Data di redazione} & \textbf{Firma} \\[1ex]
+			\hline
+			\LB & 25-12-2016 %& \myincludegraphics{path firma} \\[1ex]
+			\hline
+		\end{tabular}
+	\end{center}
+	\caption{Redazione}
+\end{table}
+
+\subsection{Approvazione}
+\begin{table}[htbp]
+	\begin{center}
+		\setlength{\extrarowheight}{\jot}
+		\begin{tabular}{|c|c|p{5cm}|}
+			\hline
+			\textbf{Nominativo}     & \textbf{Data di approvazione} & \textbf{Firma}  \\[1ex]
+			\hline
+			\LB		& 24-01-2017					%& \myincludegraphics{path firma}			\\[1ex]
+			\hline
+			\TV	&								&			\\[1ex]
+			\hline
+		\end{tabular}
+	\end{center}
+	\caption{Approvazione}
+\end{table}
+
+\subsection{Accettazione dei componenti}
+\begin{table}[htbp]
+	\begin{center}
+		\setlength{\extrarowheight}{\jot}
+		\begin{tabular}{|c|p{3.5cm}|p{6cm}|}
+			\hline
+			\textbf{Nominativo} & \textbf{Data di accettazione} & \textbf{Firma} \\[1ex]
+			\hline
+			\AZ	&	24-01-2017	%& \myincludegraphics{path firma}	\\[1ex]
+			\hline
+			\GG		&	24-01-2017	%& \myincludegraphics{path firma}		\\[1ex]
+			\hline
+			\LB		&	24-01-2017	%& \myincludegraphics{path firma}		\\[1ex]
+			\hline
+			\LS		&	24-01-2017	%& \myincludegraphics{path firma}		\\[1ex]
+			\hline
+			\MM		&	24-01-2017	%& \myincludegraphics{path firma}		\\[1ex]
+			\hline
+			\PB		&	24-01-2017	%& \myincludegraphics{path firma}		\\[1ex]
+			\hline
+		\end{tabular}
+	\end{center}
+	\caption{Accettazione}
+\end{table}
+
+\subsection{Componenti}
+\begin{table}[H]
+	\begin{center}
+		\setlength{\extrarowheight}{\jot}
+		\begin{tabular}{|c|c|p{6cm}|p{4.3cm}|}
+			\hline
+			\textbf{Nominativo} & \textbf{Matricola} & \raggedright \textbf{Indirizzo di posta elettronica} & \textbf{Ruoli} \\[1ex]
+			\hline
+	 		\AZ	& 1100543	& \href{mailto:alberto.zanatta.3@studenti.unipd.it}{alberto.zanatta.3@studenti.unipd.it} 	& \AN,  \V	\\[1ex]
+			\hline
+			\GG		& 1069456	& \href{mailto:giorgio.giuffre@studenti.unipd.it}{giorgio.giuffre@studenti.unipd.it} 	&  \AN, \AM, \V	\\[1ex]
+			\hline
+			\LB		& 1097055	& \href{mailto:luca.bergamin.3@studenti.unipd.it}{luca.bergamin.3@studenti.unipd.it}  &  \AN, \R, \V \\[1ex]
+			\hline
+			\LS 		& 1099154	& \href{mailto:luca.sgambaro@studenti.unipd.it}{luca.sgambaro@studenti.unipd.it} 	& \AN, \V	\\[1ex]
+			\hline
+			\MM		& 1097051	& \href{mailto:marco.meneghetti.5@studenti.unipd.it}{marco.meneghetti.5@studenti.unipd.it} & \AN, \AM, \V	\\[1ex]
+			\hline
+			\PB		& 1097928	& \href{mailto:paolo.baracco.1@studenti.unipd.it}{paolo.baracco.1@studenti.unipd.it} 	&  \AN, \R, \V 	\\[1ex]
+			\hline
+		\end{tabular}
+	\end{center}
+	\caption{Componenti}
+\end{table}
 
 \end{document}
